# ComfyUI-Claude-Chat

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
claude_chat/: __init__.py  claude_client.py  config.py  debug_logging.py  prompts.py
claude_chat/cli/: __init__.py  debug_viewer.py
claude_chat/tools/: __init__.py  analysis.py  base.py  context.py  discovery.py  execution.py  groups.py  highlevel.py  layout.py  links.py  lowlevel.py  models.py  nodes.py  utility.py  widgets.py
docs/: COMFYUI_CHAT.md  CONTEXT.md  DEBUG_LOGGING.md
docs/AGENT_TOOLS/: README.md
docs/IMPLEMENTATION/: PHASE_1_CONTEXT_SYSTEM.md  PHASE_2_DISCOVERY_TOOLS.md  PHASE_3_HELP_TOOL.md  PHASE_4_GROUP_TOOLS.md  PHASE_5_ORGANIZE_TOOL.md  PHASE_6_VERIFICATION.md  README.md
tests/: README.md  package-lock.json  package.json  pytest.ini  requirements-test.txt  vitest.config.js
tests/js/: batch_executor.test.js  context_generator.test.js  ref_resolver.test.js  setup.js  tool_docs.test.js  tool_hints.test.js  workflow_api.test.js
tests/python/: conftest.py  test_claude_client.py  test_prompts.py  test_tool_registry.py  test_tools_analysis.py  test_tools_discovery.py  test_tools_execution.py  test_tools_groups.py  test_tools_links.py  test_tools_nodes.py  test_tools_widgets.py
web/js/: batch_executor.js  claude_chat.js  claude_chat_panel.js  claude_chat_settings.js  context_generator.js  prompt_guard_canvas.js  prompt_guard_detector.js  prompt_guard_manager.js  prompt_guard_ui.js  ref_resolver.js  tool_docs.js  tool_hints.js  workflow_api.js  workflow_groups.js
(+47 files in other folders)
