[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-claude-chat"
version = "0.1.0"
description = "Claude AI chat panel for ComfyUI - analyze workflows and get assistance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Max", email = "drxelanull@example.com"}
]
keywords = ["comfyui", "claude", "anthropic", "ai", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
max-plan = [
    "claude-code-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/drxelanull/comfyui-claude-chat"
Repository = "https://github.com/drxelanull/comfyui-claude-chat"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_chat*"]

[tool.setuptools.package-data]
"*" = ["web/**/*"]
